...
    snackbarHostState: SnackbarHostState
) {
    NavHost(navController = navController, startDestination = NavItem.List.navRoute) {
        composable(NavItem.List.navRoute) {
            val duckItListViewModel: DuckItListViewModel = hiltViewModel<DuckItListViewModelImpl>()

            DuckItListUi(
                navController = navController,
                duckItListViewModel = duckItListViewModel,
                coroutineScope = coroutineScope,
                snackbarHostState = snackbarHostState
            )
        }
...
