...

@Preview(showBackground = true)
@Composable
fun NewPostMainContentUiPreview() = DuckItAndroidTheme {
    NewPostMainContentUi(
        modifier = Modifier,
        headlineText = "Super Duck",
        onHeadlineValueChange = { },
        imageUrlText = "https://superduck.io",
        onImageUrlValueChange = { },
        isCreateNewPostButtonEnabled = true,
        onCreateNewPostButtonClicked = { },
        isLoading = false
...
